syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package user_proto;

message CreateRequest {
  string first_name = 1;
  string last_name = 2;
  string user_name = 3;
  string email = 4;
  string password = 5;
  string confirm_password = 6;
}

message CreateResponse {
  string result = 1;
}

message DetailRequest {
  string id = 1;
}

message DetailResponse {
  string id = 1;
  string user_name = 2;
  string email = 3;
  repeated string roles = 4;
  bool is_verified = 5;
  string access_token = 6;
  int32 expires_in = 7;
  string refresh_token = 8;
}

message UserInfo {
  string id = 1;
  string user_name = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  repeated string roles = 6;
  bool email_confirmed = 7;
}   

message ListElement {
  string id = 1;
  string user_name = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
}

message UserList {
  repeated ListElement users = 1;
}

message UpdateRequest {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string current_password = 4;
  string new_password = 5;
  string confirm_password = 6;
}

message AddRolesRequest{
  string user_id = 1;
  repeated string roles = 2;
}

message RemoveRolesRequest{
  string user_id = 1;
  repeated string roles = 2;
}

message DeleteRequest{
  string id = 1;
}

message ExistsRequest{
  string id = 1;
}

message ExistsResponse{
  bool result = 1;
}

message QueryParametersRequest {
  bool descending = 1;
  int32 limit = 2;
  int32 offset = 3;
  string search = 4;
  repeated string sortable_properties = 5;
}

message PagedResultResponse {
  string href = 1;
  string next = 2;
  string prev = 3;
  int32 total = 4;
  int32 limit = 5;
  int32 offset = 6;
  repeated UserInfo items = 7;
}

message GetByIdRequest{
  string id = 1;
}

service UserService {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc AddRoles (AddRolesRequest) returns (google.protobuf.Empty);
  rpc RemoveRoles (RemoveRolesRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
  rpc Exists (ExistsRequest) returns (ExistsResponse);
  rpc GetAll (QueryParametersRequest) returns (PagedResultResponse);
  rpc GetById (GetByIdRequest) returns (UserInfo);
  rpc Update (UpdateRequest) returns (google.protobuf.Empty);
}
